# git-worktree-agent

./: .gitignore  .gwa-config.json  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  README.md  package.json
.changeset/: README.md  bundle-binaries.md  fix-provenance.md  fix-workflow.md  initial-release.md  npm-version-fix.md  retry-publish.md
.github/workflows/: ci.yml  release.yml
binaries-tmp/binary-darwin-arm64/: gwa-darwin-arm64
binaries-tmp/binary-darwin-x64/: gwa-darwin-x64
binaries-tmp/binary-linux-arm64/: gwa-linux-arm64
binaries-tmp/binary-linux-x64/: gwa-linux-x64
npm/: install.js
scripts/: build-release.sh
src/: app.rs  config.rs  executor.rs  main.rs  watcher.rs
src/app/: actions.rs  handlers.rs  mod.rs  settings.rs  setup.rs  state.rs  views.rs
src/git/: mod.rs  repository.rs  worktree.rs
src/ui/: branch_list.rs  help.rs  logs.rs  mod.rs  status.rs
