[package]
name = "git-worktree-agent"
version = "0.1.0"
description = "A TUI for managing git worktrees from remote branches with automatic polling and hooks"
authors = ["peterbartels <peter.bartels@deptagency.com>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/peterbartels/git-worktree-agent"
keywords = ["git", "worktree", "tui", "ratatui"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gwa"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29.0"
crossterm = "0.28.1"
color-eyre = "0.6.3"

# Note: All git operations use git CLI for better control over output

# Serialization for config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Pattern matching for branch filters
glob = "0.3"
regex = "1.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI args
clap = { version = "4.5", features = ["derive"] }

# Directories for config
dirs = "6.0"

# UUID for unique IDs
uuid = { version = "1.11", features = ["v4"] }

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
